tests/invalid/unsupported_call_expression/main.py
def main() -> None:
    xs: list[int] = [1, 2, 3]
    y: int = xs[0](42)
